--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <style class="silex-style"></style>
     <script type="text/javascript" class="silex-script"></script>
-    <style class="silex-inline-styles">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1478366444112-1 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366444112-0 {background-color: transparent; min-height: 235px; position: relative; margin-left: auto; margin-right: auto; background-image: url(https://images.unsplash.com/photo-1690375560372-897e3a1195d8?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzNDc5fDB8MXxyYW5kb218fHx8fHx8fHwxNjkzNTAxNTg1fA&ixlib=rb-4.0.3&q=80&w=1080);}.silex-id-1474394621033-3 {position: static; margin-top: -1px;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 540px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1478366450713-3 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366450713-2 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1442914737143-3 {width: 241px; top: 26px; left: 494px; min-height: 51px; position: absolute;}@media only screen and (max-width: 480px) {}</style>
+    <style class="silex-inline-styles">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1478366444112-1 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366444112-0 {background-color: transparent; min-height: 235px; position: relative; margin-left: auto; margin-right: auto; background-image: url(https://images.unsplash.com/photo-1690375560372-897e3a1195d8?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzNDc5fDB8MXxyYW5kb218fHx8fHx8fHwxNjkzNTAxNTg1fA&ixlib=rb-4.0.3&q=80&w=1080);}.silex-id-1474394621033-3 {position: static; margin-top: -1px;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 540px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1478366450713-3 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366450713-2 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1442914737143-3 {width: 241px; top: 26px; left: 494px; min-height: 51px; position: absolute;}.silex-id-1693501958809-5 {width: 100px; min-height: 100px; position: absolute; top: 43px; left: 237px; background-color: transparent;}.silex-id-1693502097235-6 {width: 400px; min-height: 400px; background-color: transparent; position: absolute; top: 67px; left: 483px;}@media only screen and (max-width: 480px) {}</style>
     <title></title>
     
 
@@ -37,7 +37,30 @@
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 container-element website-width" data-silex-id="silex-id-1478366444112-0" style=""></div>
     </section>
     <section data-silex-type="container-element" class="container-element editable-style silex-id-1474394621033-3 section-element prevent-resizable page-page-1 paged-element" data-silex-id="silex-id-1474394621033-3">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 container-element website-width selected" data-silex-id="silex-id-1474394621032-2" style=""></div>
+        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 container-element website-width selected" data-silex-id="silex-id-1474394621032-2" style=""><div data-silex-type="text-element" class="editable-style text-element silex-id-1693501958809-5" data-silex-id="silex-id-1693501958809-5" style="" title="didkkdkdd"><div class="silex-element-content normal"><p>New text box</p></div></div><div data-silex-type="html-element" class="editable-style html-element silex-id-1693502097235-6 silex-component-form silex-use-height-not-minheight silex-element-content-full-height" data-silex-id="silex-id-1693502097235-6" style=""><div class="silex-element-content"><form id="id_1693502098353_570" action="https://formspree.io/your@email.com" method="POST">
+  
+  <div>
+    <label for="field1">Name</label>
+    <input type="text" required="" id="field1" name="field1" placeholder="Your name">
+  </div>
+  
+  
+  <div>
+    <label for="field2">Your email adress</label>
+    <input type="text" required="" id="field2" name="field2" placeholder="your@email.com">
+  </div>
+  
+  
+  <div class="fill-vertical">
+    <label for="field3">Your message</label>
+    <textarea required="" id="field3" name="field3" placeholder="What you have to say"></textarea>
+  </div>
+  
+  <input type="submit" value="Send">
+</form>
+<style>#id_1693502098353_570 input[type=text], select {width: 100%; padding: 12px 20px; margin: 8px 0; display: inline-block; border: 1px solid #ccc; border-radius: 3px; box-sizing: border-box;}#id_1693502098353_570 input[type=submit] {width: 100%; background-color: #4CAF50; color: #FFFFFF; padding: 14px 20px; margin: 8px 0; border: 1px solid #4CAF50; border-radius: 3px; cursor: pointer;}#id_1693502098353_570 label {color: #000000;}#id_1693502098353_570 .fill-vertical {flex: 1 1 auto; display: flex; flex-direction: column;}#id_1693502098353_570 .fill-vertical textarea {flex: 1 1 auto; width: 100%; height: 150px; padding: 12px 20px; box-sizing: border-box; border: 2px solid #ccc; border-radius: 3px; background-color: #f8f8f8; font-size: 16px; resize: none;}#id_1693502098353_570 {border-radius: 3px; display: flex; flex-direction: column; justify-content: space-between; height: 100%;}</style>
+
+</div></div></div>
     </section>
     <section data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element prevent-resizable page-page-1 paged-element" data-silex-id="silex-id-1478366450713-3">
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366450713-2 container-element website-width" data-silex-id="silex-id-1478366450713-2">
